<resources>
    <string name="app_name">laudryku</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">********</string>
    <string name="passwords">Password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="email">Email</string>
    <string name="login_ke_akun_anda">Login Ke Akun Anda</string>
    <string name="backgroud">backgroud</string>
    <string name="back_button">back button</string>
    <string name="register">Register</string>
    <string name="daftarkan_laundry_kamu">Daftarkan Laundry Kamu</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="tlp">081234567890</string>
    <string name="nomor_telpon">Nomor telpon</string>
    <string name="laundryku">Laundryku</string>
    <string name="nama_laundry">Nama Laundry</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="daftar">Daftar</string>
    <string name="login_bwah">Login</string>
    <string name="sudah_punya_akun">Sudah Punya akun?</string>
    <string name="masukan_nomor_telpon">masukan nomor telpon</string>
    <string name="masukan_nama">masukan nama</string>
    <string name="masukan_nama_laundry">masukan nama Laundry</string>
    <string name="foto_laundry">Foto Laundry</string>
    <string name="belum_ada_file_dipilih">Belum Ada File dipilih</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil">profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delayicon">delayicon</string>
    <string name="total_orderan">Total Orderan</string>
    <string name="profile">Profile</string>
</resources>
