<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homedisable"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/orderdisable"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_add"
        android:enabled="true"
        android:title="add"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifdisable"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/profildisable"
        android:title="@string/profil"/>

</menu>
