<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_bg"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/backgroud" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/deskripsi"
        android:layout_marginTop="-40dp"
        android:text="@string/login_ke_akun_anda"
        android:textColor="@color/putih"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius_green"
        android:padding="18dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius_white_corner"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:hint="@string/email_example_com"
            android:padding="8dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwords"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius_white_corner"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="8dp"
            android:importantForAutofill="no" />

        <Button
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"
            android:textColor="@color/putih"
            android:background="@drawable/shape_radius_green_bg"/>


    </LinearLayout>

</RelativeLayout>