<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInterface.ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/laundrybg"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="-80dp"
            android:layout_marginTop="-30dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/backgroud" />
        <RelativeLayout
            android:id="@+id/top_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/back_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/putih"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="    Logout"
                android:textSize="14sp"
                android:background="@drawable/shape_logout"
                android:padding="6dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="22dp"
                android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
                android:drawableTint="@android:color/holo_red_light"/>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/profil_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_dashboard"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="16sp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/fotoexample"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Laundry"
                android:textColor="@color/putih"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_example_com"
                android:textColor="#2E2E2E"
                android:fontFamily="@font/roboto"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/profil_main"
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_radius_green"
            android:padding="18dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nama Pemilik"
            android:textColor="@color/abuabu"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Pemilik"
                android:textColor="@color/background"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto"
                android:text="Nomor Telpon"
                android:textColor="@color/abuabu"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="081234567890"
                android:textColor="@color/background"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alamat"
                android:textColor="@color/abuabu"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/roboto"
                android:text="Jl. Sama Kamu juga Boleh, No 3, Bangka Belitung"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius_green_bg"
                android:text="Edit Profile"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:layout_margin="12dp"
                android:fontFamily="@font/roboto"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius_white"
                android:text="kelola Jenis Barang"
                android:textColor="@color/background"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>